--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node $NODE_DEBUG_OPTION server.js",
         "startTestENV": "NODE_ENV=test node $NODE_DEBUG_OPTION server.js",
         "start:docker": "NODE_ENV=docker node server.js",
-        "test": "NODE_ENV=test nyc mocha --exit"
+        "test": "NODE_ENV=test nyc mocha --exit",
+        "createDevices": "node createDevices.js"
     },
     "repository": {
         "url": "https://github.com/teco-kit/explorer-backend",
