--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@koa/cors": "^2.2.3",
         "axios": "^0.24.0",
         "config": "^1.30.0",
+        "dotenv": "^10.0.0",
         "eslint_d": "^6.0.1",
         "hat": "*",
+        "jsonwebtoken": "^8.5.1",
         "koa": "^2.13.1",
         "koa-body": "^4.2.0",
         "koa-bodyparser": "^4.3.0",
