--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
-        "stats": "node stats.js",
+        "stats": "NODE_ENV=docker node stats.js",
         "startTestENV": "NODE_ENV=test node server.js",
         "start:docker": "NODE_ENV=docker node server.js",
         "test": "NODE_ENV=test nyc mocha --exit",
