--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "MIT",
     "dependencies": {
         "@koa/cors": "^2.2.3",
+        "adm-zip": "^0.5.9",
         "axios": "^0.24.0",
         "cli-table": "^0.3.11",
         "config": "^1.30.0",
