--- a/.github/workflows/publishDocker.yml
+++ b/.github/workflows/publishDocker.yml
@@ -2,7 +2,7 @@ name: Publish Docker image
 on:
   workflow_run:
     workflows: ["Tests"]
-    branches: [master]
+    branches: [main]
     types: 
       - completed
 jobs:
