--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": "0.0.1",
-    "description": "Backend for Explorer",
+    "description": "Backend for edge-ml",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
@@ -11,14 +11,9 @@
         "test": "NODE_ENV=test nyc mocha --exit",
         "createDevices": "node createDevices.js"
     },
-    "repository": {
-        "url": "https://github.com/teco-kit/explorer-backend",
-        "type": "git"
-    },
-    "author": "Jennifer Münk <muenk@teco.edu>",
+    "author": "Tobias King <king@teco.edu>",
     "license": "MIT",
     "dependencies": {
-        "@koa/cors": "^4.0.0",
         "adm-zip": "^0.5.10",
         "amqplib": "^0.10.3",
         "axios": "^1.3.3",
@@ -42,7 +37,6 @@
         "koa-static": "^5.0.0",
         "koa2-swagger-ui": "*",
         "mongoose": "^6.9.2",
-        "request": "^2.88.2",
         "table": "^6.8.1",
         "yamljs": "^0.3.0"
     },
