Fixed oauth bugs

--- a/.env
+++ b/.env
@@ -38,3 +38,5 @@ DB_COLLECTION_BACKEND = "backend_dev"
 RABBITMQ_URI = "amqp://localhost:5672"
 RABBITMQ_USER = "guest"
 RABBITMQ_PASS = "guest"
+
+HOST = "http://localhost:5173"
