--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "jsonwebtoken": "^9.0.0",
         "koa": "^2.14.1",
         "koa-body": "^6.0.1",
+        "koa-cookie": "^1.0.0",
         "koa-cors": "0.0.16",
         "koa-logger": "^3.2.1",
         "koa-mongoose-erd-generator": "^0.0.7",
